# TestGen

./: .gitignore  build_vectorbase.py  main.py  pyproject.toml  test_question.py
build_data/: build_guidelines.py  repair_markdowns.py
build_database/: build_guidelines.py
doc/guide/: guide of Python Hypothesis.md  guidelines_notes.json  introduction.md
doc/guide/good_guide/: adapting-strategies.html.md  adding-notes.html.md  api.html.md  builtin-strategies.html.md  custom-database.html.md  custom-strategies.html.md  detect-hypothesis-tests.html.md  domain.html.md  example-count.html.md  external-fuzzers.html.md  flaky.html.md  integrations.html.md  internals.html.md  introduction.html.md  quickstart.html.md  replaying-failures.html.md  settings.html.md  stateful.html.md  strategies.html.md  suppress-healthchecks.html.md  type-strategies.html.md
doc/guide/markdowns/: adapting-strategies.html.md  adding-notes.html.md  api.html.md  builtin-strategies.html.md  custom-database.html.md  custom-strategies.html.md  detect-hypothesis-tests.html.md  domain.html.md  example-count.html.md  external-fuzzers.html.md  flaky.html.md  integrations.html.md  internals.html.md  introduction.html.md  quickstart.html.md  replaying-failures.html.md  settings.html.md  (+4 more)
doc/pdfs/: chapters.txt  get_chapters.py
src/: assets.py
src/TestGen/: expert.py  prompt.py
src/core/: __init__.py  embeddings.py  llm_core.py  retriver.py
src/guider/: md_repair.py  read_all_guidelines.py
src/researcher/: prompt.py  researcher.py  tools.py
test/: prompt.py  test_guides.py  test_question.py
